# j1407b

./: Cargo.toml
architecture/: protocol.md
cli/: Cargo.toml
cli/src/: clap.rs  cli.rs  config.rs  error.rs  main.rs
daemon/: Cargo.toml
daemon/src/: config.rs  daemon.rs  error.rs  main.rs
shared/: Cargo.toml
shared/src/: comms.rs  config.rs  error.rs  lib.rs  protocol.rs  requests.rs  utils.rs
