[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ['sched', 'process', 'socket'] }
thiserror = "1"
rust-fr = "1.0.1"
serde = { version = "1", features = ["derive"] }
shared = { path = "../shared" }
